app/data/code/snippetA/snippetA_error.txt
File "main.py", line 36
  """
  ^
SyntaxError: unterminated triple-quoted string literal (detected at line 40)